# pkg/database/models/training_notes.go
@@ -9,13 +9,15 @@ import (
 type TrainingNotes struct {
 	ID            uint                 `json:"id" gorm:"primaryKey" example:"1"`
 	StudentCID    uint                 `json:"student_cid" example:"1293257" gorm:"index"`
+	Student       *User                `json:"-" gorm:"foreignKey:StudentCID"`
 	InstructorCID uint                 `json:"instructor_cid" example:"1293257"`
+	Instructor    *User                `json:"-" gorm:"foreignKey:InstructorCID"`
 	Facility      constants.FacilityID `json:"facility" example:"ZDV"`
 	Position      string               `json:"position" example:"DEN_DEL"`
-	Duration      time.Duration        `json:"duration" example:"1h30m"`
-	Score         uint                 `json:"score" example:"100"`
+	Duration      time.Duration        `json:"duration" example:"60"`
 	Notes         string               `json:"notes" example:"Great job!"`
-	OTSRecordID   uint                 `json:"ots_record_id" example:"1"`
+	RatingExamID  uint                 `json:"rating_exam_id" example:"1"`
+	RatingExam    *RatingExamRecord    `json:"-" gorm:"foreignKey:RatingExamID"`
 	SessionDate   time.Time            `json:"session_date" example:"2021-01-01T00:00:00Z"`
 	CreatedAt     time.Time            `json:"created_at" example:"2021-01-01T00:00:00Z"`
 	UpdatedAt     time.Time            `json:"updated_at" example:"2021-01-01T00:00:00Z"`
@@ -39,6 +41,6 @@ func (tn *TrainingNotes) Get() error {
 
 func GetFilteredTrainingNotes(filter map[string]interface{}) ([]TrainingNotes, error) {
 	var notes []TrainingNotes
-	err := database.DB.Where(filter).Find(&notes).Error
+	err := database.DB.Preload("Student").Preload("Instructor").Preload("RatingExam").Where(filter).Find(&notes).Error
 	return notes, err
 }
